# dirstat

./: .gitignore  CMakeLists.txt  README.md  dirstat.cpp  dirstat.hpp  main.cpp  pool.cpp  pool.hpp
tests/: CMakeLists.txt  Test.cpp
tests/test/dir1/: file5.txt
tests/test/test/dir1/: file2.txt
